gcc/testsuite/rust/rustc/ui/parser/recover-struct.rs
fn main() {
    struct Test {
        Very
        Bad // { dg-error "" "" { target *-*-* } }
        Stuff
    }
}

